--- a/etc/test/depr/Makefile
+++ b/etc/test/depr/Makefile
@@ -1,9 +1,9 @@
 include ../etc/include.mk
 
 all: $(EBIN_FILES)
-	@:
-
-fast: $(EBIN_FILES)
+   
+debug:
+	$(MAKE) DEBUG=-DDEBUG
 
 clean:
 	@rm -rf $(EBIN_FILES)
